Fix visibility issue when editing features with annimation

--- a/assets/front/css/sek-base.css
+++ b/assets/front/css/sek-base.css
@@ -294,7 +294,7 @@
   }
 }
 
-.sek-animate-candidate:not(.sek-animate-displayed-before-starting) {
+body:not(.customizer-preview) .sek-animate-candidate:not(.sek-animate-displayed-before-starting) {
   opacity: 0;
 }
 
